# pinocchio-sandbox

./: .gitignore  Cargo.toml  README.md
src/: instruction.rs  lib.rs  processor.rs  state.rs
tests/: main.rs  test.rs
