[package]
name = "pinocchio-sandbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
pinocchio = { version = "0.9.2", features = ["std"] }
pinocchio-log = "0.5.1"
pinocchio-system = "0.3.0"
sha2 = { version = "0.10.9", default-features = false }
